--- a/Discover-Bank-Phone/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/content"
@@ -11,25 +11,27 @@
         android:layout_alignParentRight="true"
         android:layout_marginLeft="@dimen/forms_inner_padding"
         android:layout_marginRight="@dimen/forms_inner_padding"
+        android:clickable="false"
         android:paddingBottom="@dimen/table_inner_padding"
         android:paddingTop="@dimen/table_inner_padding"
         android:weightSum="4" >
-        
-        
-          <RelativeLayout
+
+        <RelativeLayout
             android:id="@+id/filter_1"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:clickable="false"
             android:paddingRight="@dimen/between_related_elements_padding" >
 
             <TextView
                 android:id="@+id/date"
                 style="@style/table_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:clickable="false" />
 
-            <!-- Avoiding a compound drawable so that the symbol can be easily shown/hidden  -->
+            <!-- Avoiding a compound drawable so that the symbol can be easily shown/hidden -->
 
             <ImageView
                 android:id="@+id/reocurring"
@@ -39,8 +41,8 @@
                 android:layout_marginLeft="18dp"
                 android:layout_marginTop="1dp"
                 android:background="@drawable/recurring_icon"
+                android:clickable="false"
                 android:visibility="gone" />
-
         </RelativeLayout>
 
         <TextView
@@ -49,6 +51,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.4"
+            android:clickable="false"
             android:paddingRight="@dimen/between_related_elements_padding" />
 
         <TextView
@@ -57,7 +60,9 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.6"
-            android:gravity="right" 
-            android:lines="1"/>
+            android:clickable="false"
+            android:gravity="right"
+            android:lines="1" />
     </LinearLayout>
+
 </RelativeLayout>
