DE6256 - The footer in a bunch of screens and some links are too vertically close to other elements- seems to be baseline only in a number of baselines DE5773 - Android - incorrect transitions after click on schedule payment and review payments (QC# 97780)
Tested
-Verified in Account Summary: Privacy & Terms | Provide Feedback are not too close to phone number.
-Verified in Deposit a Check, in Enter Details: Privacy & Terms is NOT too to phone number when user is inputting Deposit Amount.
-Verified in Pay Bills under Pay Bills: Privacy & Terms is NOT too close to Add Another Payee button.
-Verified in If you tap a Payee: Privacy & Terms is NOT too close to Cancel link.
-Verified in Manage Payees: Privacy & Terms is NOT too close to Add New Payee button.
-Verified in Manage Payees, tap on a payee: Privacy & Terms is NOT too close to Delete link.

--- a/Discover-Bank-Phone/res/layout/bank_layout_footer.xml
+++ b/Discover-Bank-Phone/res/layout/bank_layout_footer.xml
@@ -4,7 +4,8 @@
     android:id="@+id/footer_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/modal_footer_topmargin">
 
     <include
         android:id="@+id/need_help_footer"
@@ -13,7 +14,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
- 		android:gravity="center_horizontal|bottom">
+ 		android:gravity="center_horizontal|bottom"		
+        android:layout_marginTop="@dimen/modal_footer_topmargin">
 
         <Button
             android:id="@+id/privacy_terms"
