--- a/Discover-Bank-Phone/res/layout/bank_need_help_footer.xml
+++ b/Discover-Bank-Phone/res/layout/bank_need_help_footer.xml
@@ -9,8 +9,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_centerHorizontal="true"
 	    android:layout_alignParentBottom="true"
-	    android:orientation="vertical"
-        android:layout_marginBottom="@dimen/between_related_elements_padding">
+	    android:orientation="vertical">
 
         <TextView
             android:id="@+id/need_help_label"
