US9404 - Added an overlay to show a user the tap and hold to search feature.
Test Cases:
	- Validated that the overlay appears on all 4 layouts.
	- Validated that the overlay prevents the functionality of the map view until completion.
	- Validated that the overlay appears using the fade in animation.
	- Validated that the overlay disappears using the fade out animation.

--- a/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
@@ -32,6 +32,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" />
 
+    <com.discover.mobile.bank.atm.AtmTapAndHoldCoachOverlay
+        android:id="@+id/tap_and_hold_coach"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/full_search_bar"
+        android:focusable="true"
+        android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/map_navigation_panel"
         android:layout_width="wrap_content"
