--- a/Discover-Bank-Phone/res/layout-land/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_map.xml
@@ -31,6 +31,14 @@
         style="@style/orange_help_button"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" />
+    
+	<com.discover.mobile.bank.atm.AtmTapAndHoldCoachOverlay
+        android:id="@+id/tap_and_hold_coach"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/full_search_bar"
+        android:focusable="true"
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/map_navigation_panel"
