--- a/Discover-Commons/res/layout/common_dropdown_item.xml
+++ b/Discover-Commons/res/layout/common_dropdown_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@drawable/common_dropdown_item_background"
     android:padding="6dp">
-
+    
     <TextView
         android:id="@+id/common_dropdown_item_title"
         android:layout_width="fill_parent"
@@ -13,17 +13,13 @@
         android:gravity="left"
         android:orientation="vertical"
         android:textColor="@color/sub_copy"
-        android:text="My Checking Account"
-        android:textSize="18sp"
-        android:paddingBottom="2dp" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/common_dropdown_item_subtitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:text="Account Ending in 000"
-        android:textColor="@color/field_copy"
-        android:textSize="14sp" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
