--- a/Discover-Commons/res/drawable/common_switch_inner_holo_light.xml
+++ b/Discover-Commons/res/drawable/common_switch_inner_holo_light.xml
@@ -12,9 +12,11 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
+
 -->
 
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true"  android:drawable="@drawable/switch_bg_focused_holo_light" />
-    <item                               android:drawable="@drawable/switch_bg_holo_light" />
+    <item android:state_checked="false" android:drawable="@drawable/common_switch_thumb_holo_light"/>
+    <item android:drawable="@drawable/common_switch_thumb_activated_holo_light"/>
 </selector>
