--- a/Discover-Commons/res/values/attrs_common_table.xml
+++ b/Discover-Commons/res/values/attrs_common_table.xml
@@ -2,7 +2,7 @@
 <resources>
     
         
-    <!-- BankLayoutFooterType Custom Attributes  -->
+    <!--  Custom Attributes for the table buttons -->
     <declare-styleable name="com.discover.mobile.common.ui.table.TableButtonGroup">
         <attr name="resourceArry" format="integer"/>
     </declare-styleable>
