--- a/Discover-Commons/res/values/styles_common_toggle_switch.xml
+++ b/Discover-Commons/res/values/styles_common_toggle_switch.xml
@@ -3,18 +3,18 @@
    
     
     <style name="common_switch_light">
-        <item name="track">@drawable/switch_track_holo_light</item>
-        <item name="thumb">@drawable/switch_inner_holo_light</item>
+        <item name="track">@drawable/common_switch_track_holo_light</item>
+        <item name="thumb">@drawable/common_switch_inner_holo_light</item>
         <item name="textOn">@string/textOn</item>
         <item name="textOff">@string/textOff</item>
         <item name="thumbTextPadding">12dip</item>
         <item name="switchMinWidth">96dip</item>
         <item name="switchPadding">16dip</item>
         <item name="android:textColor">@color/field_copy</item>
-        <item name="switchTextAppearance">@style/TextAppearance</item>
+        <item name="switchTextAppearance">@style/common_text_appearance</item>
     </style>    	
    
-    <style name="TextAppearance">
+    <style name="common_text_appearance">
         <item name="textColor">@color/field_copy</item>
         <item name="textColorHighlight">?android:attr/textColorHighlight</item>
         <item name="textColorHint">@color/field_copy</item>
