--- a/Discover-Bank-Phone/res/values/color.xml
+++ b/Discover-Bank-Phone/res/values/color.xml
@@ -5,6 +5,7 @@
     <!-- Various Colors -->
     <color name="white">#ffffff</color>
 	<color name="black">#000</color>
+	<color name="passcodeBlack">#293033</color>
 	<color name="blue">#025D96</color>
 	<color name="orange">#FD6C04</color>
 	<color name="red">#ff0000</color>
