--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -71,4 +71,24 @@
         <item name="android:textColor">@color/title</item>
     </style>
     
+    <style name="PasscodeDigit">
+        <item name="android:background">@drawable/rectangle</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:typeface">serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:clickable">false</item>
+        <item name="android:longClickable">false</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">54dp</item>
+        <item name="android:layout_marginLeft">3dp</item>
+        <item name="android:layout_marginRight">3dp</item>
+        <item name="android:maxLength">1</item>
+        <item name="android:digits">0123456789</item>
+        <item name="android:keepScreenOn">true</item>
+        <item name="android:inputType">textPassword</item>
+    </style>
 </resources>
