--- a/Discover-Card-Phone/res/values/strings_whats_new_content.xml
+++ b/Discover-Card-Phone/res/values/strings_whats_new_content.xml
@@ -10,7 +10,7 @@
     
 <!-- Strings Used on QuickView -->
     
-    <string name="quickview_content_heading">Get quick view of your account</string>
+    <string name="quickview_content_heading">Get a quick view of your account</string>
     <string name="quickview_content_description_cbb">View your current balance,available credit and <i>Cashback Bonus</i> balance at anytime with just a quick tap or swipe of your finger.	
 	</string>
 	<string name="quickview_content_description_mi">View your current balance, available credit and Miles balance at anytime with just a quick tap or swipe of your finger.	
