--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -23,6 +23,7 @@
     <string name="activity_online_checking">Online Checking:</string>
     <string name="activity_available_balance">Available Balance:</string>
     <string name="activity_current_balance">Current Balance:</string>
+    <string name="activity_interest_rate">Interest Rate:</string>
     <string name="activity_no_scheduled">You have no scheduled transactions.</string>
     <string name="activity_no_posted">You have no account activity.</string>
     <string name="activity_table_name">Transactions</string>
