--- a/Discover-Bank-Phone/res/layout/bank_atm_redo_search_coach.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_redo_search_coach.xml
@@ -30,7 +30,7 @@
       	android:textColor="#FFFFFF" 
       	android:fontFamily="Verdana"
       	android:textSize="16sp"
-      	android:shadowColor="#000000"
+      	android:shadowColor="#BF000000"
       	android:shadowDx="2"
       	android:shadowDy="2"
       	android:shadowRadius="2"/>
