US9559:  Updated the text in the buttons to be centered when on 2 lines.

--- a/Discover-Commons/res/layout/common_table_tab.xml
+++ b/Discover-Commons/res/layout/common_table_tab.xml
@@ -12,7 +12,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:layout_marginTop="@dimen/forms_inner_padding"
-        android:clickable="false" />
+        android:clickable="false"
+        android:gravity="center_horizontal" />
 
     <View
         android:id="@+id/selected"
