--- a/Discover-Bank-Phone/res/values/strings_faq_general.xml
+++ b/Discover-Bank-Phone/res/values/strings_faq_general.xml
@@ -15,7 +15,7 @@
 <!-- General FAQ Items -->
 	<string name="is_banking_safe_title">Is the Discover Mobile App as secure as Discover.com?</string>
 	<string name="is_banking_safe_body">
-		<![CDATA[The Discover Mobile App uses the same security standards as <a href="com.discover.mobile://www.discover.com">Discover.com</a>.  We ensure a high security level by never showing your account number, timing out each section after a period of inactivity, and by using your existing User ID and Password, which only you know.]]>
+		<![CDATA[The Discover Mobile App uses the same security standards as <a href="com.discover.mobile://www.discover.com">Discover.com</a>.  We ensure a high security level by never showing your account number, timing out each session after a period of inactivity, and by using your existing User ID and Password, which only you know.]]>
 	</string>
 	
 	<string name="whats_required_title">What do I need to log in to Discover Mobile?</string>
